--- a/index.html
+++ b/index.html
@@ -79,22 +79,22 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="./images/image1.png" alt="photo Mark Guerrero" width="3h364" />
+                    <img src="/images/image1.png" alt="photo Mark Guerrero" width="364" />
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/image3h3.png" alt="photo Tom Ford" width="3h364" />
+                    <img src="./images/image2.png" alt="photo Tom Ford" width="364" />
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/image3.png" alt="photo Camila Garcia" width="3h364" />
+                    <img src="./images/image3.png" alt="photo Camila Garcia" width="364" />
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/image4.png" alt="photo Daniel Wilson" width="3h364" />
+                    <img src="./images/image4.png" alt="photo Daniel Wilson" width="364" />
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
