--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="/images/image1.png" alt="photo Mark Guerrero" width="364" />
+                    <img src="./images/image1.png" alt="photo Mark Guerrero" width="364" />
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
