--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HW №01</title>
-    <link rel="shortcut icon" href="./images/favicon.png" />
+    <link rel="shortcut icon" href="./images/favicon.jpg" />
   </head>
 
   <body>
@@ -21,7 +21,7 @@
 
       <address>
         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+        <a href="tel:+110001111111">+11(000)111-11-11</a>
       </address>
     </header>
     <!-- #endregion -->
@@ -73,22 +73,40 @@
       <!-- #region Our Team -->
       <section>
         <h2>Our Team</h2>
-
-        <img src="./images/image1.png" alt="photo Mark Guerrero" width="364" />
-        <h3>Mark Guerrero</h3>
-        <p>Product Designer</p>
-
-        <img src="./images/image2.png" alt="photo Tom Ford" width="364" />
-        <h3>Tom Ford</h3>
-        <p>Frontend Developer</p>
-
-        <img src="./images/image3.png" alt="photo Camila Garcia" width="364" />
-        <h3>Camila Garcia</h3>
-        <p>Marketing</p>
-
-        <img src="./images/image4.png" alt="photo Daniel Wilson" width="364" />
-        <h3>Daniel Wilson</h3>
-        <p>UI Designer</p>
+        <ul>
+          <li>
+            <img
+              src="./images/image1.jpg"
+              alt="photo Mark Guerrero"
+              width="264"
+            />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img src="./images/image2.jpg" alt="photo Tom Ford" width="264" />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img
+              src="./images/image3.jpg"
+              alt="photo Camila Garcia"
+              width="264"
+            />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/image4.jpg"
+              alt="photo Daniel Wilson"
+              width="264"
+            />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
       </section>
       <!-- #endregion -->
     </main>
