--- a/index.html
+++ b/index.html
@@ -9,19 +9,26 @@
 
   <body>
     <!-- #region Header -->
-    <header>
+    <header id="home">
       <nav>
-        <a href="/">Web<span>Studio</span></a>
+        <a>
+          <i>WebStudio</i>
+        </a>
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
           <li><a href="">Contacts</a></li>
         </ul>
       </nav>
-
       <address>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+110001111111">+11(000)111-11-11</a>
+        <ul>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a href="tel:+110001111111">+11(000)111-11-11</a>
+          </li>
+        </ul>
       </address>
     </header>
     <!-- #endregion -->
