--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
     <!-- #region Header -->
     <header id="home">
       <nav>
-        <a>
-          <i>WebStudio</i>
-        </a>
+        <a href=""> WebStudio </a>
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
@@ -119,7 +117,7 @@
     </main>
 
     <footer>
-      <a href="/">Web<span>Studio</span></a>
+      <a href=""> WebStudio </a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
