--- a/index.html
+++ b/index.html
@@ -4,18 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HW №01</title>
-    <link rel="shortcut icon" href="./images/favicon.jpg" />
   </head>
-
   <body>
     <!-- #region Header -->
     <header id="home">
       <nav>
-        <a href=""> WebStudio </a>
+        <a href="/index.html">WebStudio</a>
         <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+          <li><a href="/">Studio</a></li>
+          <li><a href="/">Portfolio</a></li>
+          <li><a href="/">Contacts</a></li>
         </ul>
       </nav>
       <address>
@@ -60,8 +58,8 @@
           <li>
             <h3>Diligence</h3>
             <p>
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
+              Research and confirm brands with the strongest digital growth
+              opportunities and minimize risk.
             </p>
           </li>
           <li>
@@ -74,7 +72,6 @@
         </ul>
       </section>
       <!-- #endregion -->
-
       <!-- #region Our Team -->
       <section>
         <h2>Our Team</h2>
@@ -115,13 +112,11 @@
       </section>
       <!-- #endregion -->
     </main>
-
     <footer>
-      <a href=""> WebStudio </a>
+      <a href="/index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
-      </p>
     </footer>
   </body>
 </html>
