--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- #region Header -->
     <header id="home">
       <nav>
-        <a href="/index.html">WebStudio</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="/">Studio</a></li>
           <li><a href="/">Portfolio</a></li>
@@ -113,10 +113,11 @@
       <!-- #endregion -->
     </main>
     <footer>
-      <a href="/index.html">WebStudio</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
+      </p>
     </footer>
   </body>
 </html>
