--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HW №01</title>
+    <title>WebStudio</title>
   </head>
   <body>
     <!-- #region Header -->
@@ -39,7 +39,7 @@
 
       <section>
         <!-- hidden title h2 -->
-        <h2>Hidden</h2>
+        <h2>Advantages</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
